# cpp

./: mul.asm  sub.asm
_3/: CMakeLists.txt  big_integer.cpp  big_integer.h  big_integer1.cpp  big_integer2.cpp  big_integer2.h  big_integer_no.cpp  big_integer_no.h  big_integer_testing  main.cpp  sh_ptr.h  tags
any_container/: any_container.h  any_iterator.h  something.h
asm_mul/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  mul  mul.asm
asm_sub/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  sub
bigint/: .wifirc  big__integer.cpp  big_integer.cpp  bigint.cpp  stdin  stdout  tags
bigint/1/: a.cpp  big_integer.cpp  big_integer.h
bigint/__/: big_integer.cpp  big_integer.h  big_integer_testing
bigint/last/: big_integer.cpp  integer_no_soo.cpp  integer_no_soo_2.cpp  integer_no_soo_3.cpp  tags
bigint/last_version/: CMakeCache.txt  CMakeLists.txt  Makefile  big_integer.cpp  big_integer.h  big_integer_testing  cmake_install.cmake
bigint/test/: big_integer.h  big_integer_testing
bigint/test/0/: big_integer.cpp  big_integer.h  big_integer_.cpp  big_integer__.cpp  big_integer___.cpp  big_integer_testing  main.cpp
bigint/test/0/1/: 32  (+6 more)
bind/: bindf.h  something.h  test.cpp
haffman_last/: CMakeLists.txt  haffman  haffman.cpp  lib.cpp  lib.h  status.h
hw5/: linked_ptr.h  persistent_set.h  shared_ptr.h  testx.cpp
variant/: somethig.h  storage.h  storage_2.h  unit_test.cpp  variant.h
zachet_02_09_17/: list.h
zachet_2/: list.cpp  list.h  main.cpp
zachet_deque/: deque.h  iterators.h  test.cpp  test2.cpp  test3.cpp
